cabal-version:      3.0
name:               lyah-site
version:            0.1.0.0
license:            CC-BY-NC-SA-3.0
author:             LYAH Community
maintainer:         lyah-community@example.com
build-type:         Simple

executable site
  main-is:          site.hs
  build-depends:    base >= 4 && < 5
                  , hakyll >= 4.16 && < 4.17
                  , pandoc-types
                  , filepath
                  , containers
                  , text
  ghc-options:      -threaded
  default-language: Haskell2010
